Fixed site title font size on mobile viewpoints to fit the header div better

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -52,7 +52,7 @@ h6 {
 	}
 
 	.site-title {
-		font-size: 16px;
+		font-size: 22px;
 		padding-right: 20px;
 	}
 
@@ -64,6 +64,12 @@ h6 {
 		fill: var(--font-color);
 	}	
 
+}
+
+@media screen and (max-width: 370px) {
+	.site-title {
+		font-size: 16px;
+	}
 }
 
 .site-nav .menu-icon > svg path {
